# cw721-whitelist

./: Beaker.toml  Cargo.toml
contracts/cw721-whitelist/: Cargo.toml  README.md
contracts/cw721-whitelist/examples/: schema.rs
contracts/cw721-whitelist/schema/: cw721-whitelist.json
contracts/cw721-whitelist/src/: lib.rs  msg.rs  state.rs
contracts/whitelist-manager/: Cargo.toml  NOTICE  README.md
contracts/whitelist-manager/src/: contract.rs  msg.rs  state.rs
scripts/: README.md  package-lock.json
scripts/cw721/: 0_manager_store.js  0_token_store.js  1_manager_instantiate.js  1_token_instantiate.js  2_manager_add_contract_nft.js  2_token_mint.js  3_manager_add_whitelist.js  3_manager_remove_whitelist.js
scripts/cw721/config/: deployment_info.json
