[package]
name = "cw721-whitelist"
description = "cw721 NFT with whitelist example"
authors = [
  "HoaNM6 Aura <mr.nmh175@gmail.com>",
]
version       = "1.0.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/aura-nw/cw721-whitelist"
homepage      = "https://aura.network/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
